--- a/tbh/index.html
+++ b/tbh/index.html
@@ -26,7 +26,7 @@
 
 
 	<div>
-		<img src="img/mainvisual.jpg" alt="mainVisual">
+		<img src="img/mainVisual.jpg" alt="mainVisual">
 	</div><!-- mainVisual -->
 
 	<div>
