--- a/tbh/stay.html
+++ b/tbh/stay.html
@@ -45,7 +45,7 @@
 
 	<div>
 		見取り図<br>
-		<img src="img/見取り図.jpg" alt="見取り図"><br>
+		<img src="img/sketch.jpg" alt="sketch"><br>
 		<a href="">[PDF 16KB]</a>
 	</div>
 
