--- a/ios_app/movie.html
+++ b/ios_app/movie.html
@@ -6,8 +6,12 @@
 <link rel="stylesheet" href="css/reset.css">
 <style>
 .movie{
-	width: 2400px; /*ここに動画の横幅をいれる*/
+	width: 1000px; /*ここに動画の横幅をいれる*/
 	margin: 0 auto;
+}
+
+.movie video{
+	width: 1000px; /*ここに動画の横幅をいれる*/
 }
 </style>
 </head>
